--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,9 @@ main {
     display: grid;
     grid-template-rows: 7fr 10fr;
 
-    gap: 5px;
-
     height: 95%;
 
-    border-radius: 15px;
+    border-radius: 2.5vh;
     background-color: black;
     aspect-ratio: 195/422;
     overflow: hidden;
@@ -45,7 +43,6 @@ main {
 }
 
 .buttons {
-    margin: 5px;
     display: grid;
     grid-template-rows: repeat(5, 1fr);
 }
@@ -76,9 +73,9 @@ div .button {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 5px;
-    font-size: 1.5em;
-    border-radius: 1000px;
+    margin: 0.75vh;
+    font-size: 5vh;
+    border-radius: 1000vh;
 }
 
 .top-math-btn {
@@ -92,7 +89,6 @@ div .button {
 }
 
 div .zero-btn {
-    padding: 0 0 0 20px;
     display: flex;
     justify-content: flex-start;
 }
@@ -106,7 +102,6 @@ div .zero-btn {
 
 .numeric-btn:not(:active) {
     background-color: #2c2c2c;
-    transition: 0.4s;
 }
 
 .numeric-btn:active {
@@ -122,7 +117,6 @@ div .zero-btn {
     background-color: #ff960f;
     color: white;
     fill: white;
-    transition: 0.4s;
 }
 
 .math-operation-btn:active {
@@ -134,7 +128,6 @@ div .zero-btn {
 
 .top-math-btn:not( :active) {
     filter: invert(0%);
-    transition: 0.4s;
 }
 
 .top-math-btn:active {
@@ -143,9 +136,23 @@ div .zero-btn {
 }
 
 #result-text {
-    max-width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: end;
 
-    font-size: 3.5em;
+    max-height: 14vh;
+    height: 100%;
+
+    font-size: 10vh;
     font-weight: lighter;
-    margin: 0 20px -10px 10px;
+    margin: 0 1.5vh 0 1.5vh;
+}
+
+#zero {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+#revert-signal img {
+    height: 5vh;
 }
