--- a/css/style.css
+++ b/css/style.css
@@ -167,8 +167,22 @@ div .zero-btn {
     transition: 0.04s;
 }
 
-@media only screen and (hover: none) and (pointer: coarse) {
+@media only screen and (max-device-width: 640px) {
+    body {
+        background-color: black;
+    }
+
     main {
         height: 100%;
+    }
+}
+
+@media only screen and (max-device-width: 768px) {
+    body {
+        background-color: rgb(23, 23, 23);
+    }
+
+    main {
+        height: 97.5%;
     }
 }
