--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .numeric-btn {
